@@ -1,3 +1,9 @@
+Thu Apr  9 07:18:48 2015  Piotr Szotkowski  <chastell@chastell.net>
+
+	* ext/pathname/lib/pathname.rb: blockless Pathname#ascend
+	  and Pathname#descend return Enumerator.  [Feature #11052]
+	* test/pathname/test_pathname.rb: test the above.
+
 Wed Apr  8 17:45:02 2015  Shannon Skipper  <shannonskipper@gmail.com>
 
 	* version.c (Init_version): the version of the engine or
